<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/choice_buttons"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title_where_label"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="4dp"
                android:background="@color/jungle_green"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/modify_where_txt"
                android:textColor="@color/sc_light_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" >

                <TextView
                    android:id="@+id/place_name_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/place_name"
                    android:textColor="@color/jungle_green"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/place_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text">
                </EditText>

                <TextView
                    android:id="@+id/street_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/street"
                    android:textColor="@color/jungle_green"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/street_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" >
                </EditText>

                <TextView
                    android:id="@+id/city_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/city"
                    android:textColor="@color/jungle_green"
                    android:textStyle="bold" />

                 <EditText
                    android:id="@+id/city_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city_hint"
                    android:inputType="text" >
                </EditText>
         
                 
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    
    <LinearLayout
        android:id="@+id/choice_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/edit_contacts_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/edit_contacts_modify_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/modify" />
    </LinearLayout>

</RelativeLayout>